# pequod-engine

./: .clang  .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  GOALS.md  LICENSE  Makefile  README.md  groups  project.config
20-games-challenge/assets/: assets
20-games-challenge/breakout/: main.cc  scene.cc  scene.hh
20-games-challenge/pong/: main.cc  pong_scene.cc  pong_scene.h  scene.cc  scene.hh
20-games-challenge/space_invaders/: main.cc  scene.cc  scene.hh
20-games-challenge/space_invaders.pdproj/scenes/: main.xml  main_game.xml
20-games-challenge/space_invaders.pdproj/scripts/: character.luau
doc/html/: annotated.html  box2d_8hh_source.html  breakout__scene_8hh_source.html  camera_8hh_source.html  classBPLayerInterfaceImpl-members.html  classBPLayerInterfaceImpl.html  classBallRigidBody-members.html  classBallRigidBody.html  classBox2D-members.html  classBox2D.html  classBreakoutScene-members.html  classBreakoutScene.html  classBrickRigidBody-members.html  classBrickRigidBody.html  classCamera-members.html  classCamera.html  classECS-members.html  classECS.html  classEntity-members.html  classEntity.html  classGameObject-members.html  classGameObject.html  classImage-members.html  classImage.html  classMesh-members.html  classMesh.html  classMyBodyActivationListener-members.html  classMyBodyActivationListener.html  classMyContactListener-members.html  classMyContactListener.html  classObjectLayerPairFilterImpl-members.html  classObjectLayerPairFilterImpl.html  classObjectVsBroadPhaseLayerFilterImpl-members.html  classObjectVsBroadPhaseLayerFilterImpl.html  classPequodEngine-members.html  classPequodEngine.html  classPequod_1_1Editor-members.html  classPequod_1_1Editor.html  classPequod_1_1EditorScene-members.html  classPequod_1_1EditorScene.html  (+80 more)
doc/html/search/: all_0.js  (+42 more)
doc/latex/: annotated.tex  box2d_8hh_source.tex  breakout__scene_8hh_source.tex  camera_8hh_source.tex  classBPLayerInterfaceImpl.eps  classBPLayerInterfaceImpl.tex  classBallRigidBody.eps  classBallRigidBody.tex  classBox2D.eps  classBox2D.tex  classBreakoutScene.eps  classBreakoutScene.tex  classBrickRigidBody.eps  classBrickRigidBody.tex  classCamera.tex  classECS.tex  classEntity.tex  classGameObject.eps  classGameObject.tex  classImage.tex  classMesh.tex  classMyBodyActivationListener.eps  classMyBodyActivationListener.tex  classMyContactListener.eps  classMyContactListener.tex  classObjectLayerPairFilterImpl.eps  classObjectLayerPairFilterImpl.tex  classObjectVsBroadPhaseLayerFilterImpl.eps  classObjectVsBroadPhaseLayerFilterImpl.tex  classPequodEngine.tex  classPequod_1_1Editor.tex  classPequod_1_1EditorScene.eps  classPequod_1_1EditorScene.tex  classPequod_1_1FileExplorer.eps  classPequod_1_1FileExplorer.tex  classPequod_1_1GamePreview.eps  classPequod_1_1GamePreview.tex  classPequod_1_1GameScene.tex  classPequod_1_1Panel.eps  classPequod_1_1Panel.tex  (+47 more)
editor/: editor.h  editor_project.h  editor_scene.h  main.cc
editor/editor_windows/: editor_main.cc  editor_main.h  editor_main.hh  editor_project.cc  editor_project.hh  editor_scene.cc  editor_scene.hh  game_scene.hh  preview_scene.cc  preview_scene.h
editor/files/: scene_parser.hh
editor/panel/: breakout_scene.cc  breakout_scene.hh  file_explorer.cc  file_explorer.hh  game_preview.cc  game_preview.hh  object_properties.cc  object_properties.h  object_tree.cc  object_tree.h  panel.cc  panel.hh  preview_scene.h
editor/project_handler/: editor_project.cc  editor_project.hh  project_handler.cc  project_handler.hh
editor/sceneobjects/: game_scene.cc  game_scene.hh
editor/ui_editor/: scene.cc  scene.h
examples/breakout/: breakout_scene.cc  breakout_scene.h  main.cc
examples/pong/: main.cc  pong_scene.cc  pong_scene.h
examples/space_invaders/: main.cc  space_invaders.cc  space_invaders.h
lib/engine/: engine.cc  engine.hh  scene.cc  scene.hh
lib/gameobjects/: camera.cc  camera.hh  cube.cc  cube.hh  gameobject.cc  gameobject.hh  objectmanager.cc  objectmanager.hh  quad.cc  quad.hh
pequod/: globals.h
pequod/algorithms/: sparse_set.h
pequod/application/: application.cc  application.h  d3d11_application.cc  d3d11_application.h  d3d11_renderer.cc  d3d11_renderer.h  default_application.h  vulkan_application.cc  vulkan_application.h
pequod/assets/: images.cc  images.hh
pequod/debugger/: debugger.cc  debugger.h  debugger.hh
pequod/ecs/: ecs.cc  ecs.hh  entity.hh  mesh.cc  mesh.hh  position.cc  position.hh  texture.hh
pequod/engine/: engine.cc  engine.hh  scene.cc  scene.h  scene.hh  world_scene.cc  world_scene.h
pequod/gameobjects/: camera.cc  camera.hh  cube.cc  cube.hh  gameobject.cc  gameobject.hh  quad.cc  quad.hh
pequod/input/: input_manager.cc  input_manager.h
pequod/math/: vector.cc  vector.h
pequod/os/: filesystem.cc  filesystem.h
pequod/physics/: collision.hh
pequod/physics_engine/: collision_shape.cc  collision_shape.h  physics_engine.cc  physics_engine.h
pequod/pipelines/: renderer.cc  renderer.h
pequod/pobject/: manager.cc  manager.h  pobject.cc  pobject.h  property.h  texture_atlas.cc  texture_atlas.h
pequod/properties/: camera.cc  camera.h  collision_body.cc  collision_body.h  mesh.cc  mesh.h  position.cc  position.h  property.cc  property.h  texture2d.cc  texture2d.h  transform.cc  transform.h
pequod/renderer/: renderer.cc  renderer.h
pequod/resources/: atlas.h  resourcemanager.h  spritemap.cc  spritemap.h
pequod/rigidbody/: box2d.cc  box2d.hh  rigidbody.cc  rigidbody.hh
pequod/scene/: scene.cc  scene.h
pequod/serialization/: serialization.cc  serialization.h
pequod/shaders/: generic_texture.glsl  generic_texture.glsl.hh  main.ps.hlsl  main.vs.hlsl  static.vs.hlsl  textured.ps.hlsl
pequod/ui/: ui_element.cc  ui_element.h  ui_system.cc  ui_system.h
pequod/window/: window.h
scripts/: compile_shaders.sh  mingw-w64-x86_64.toolchain.cmake  setup_project_linux.sh  setup_project_macos.sh
shaders/: generic_texture.glsl  generic_texture.glsl.hh
src/: 1-triangle.glsl  main.cc  main.mm
src/scenes/: demo_scene.cc  demo_scene.hh
tests/: main.cc
(+14 files in other folders)
